# bandim_platform

./: README.md  bandim-fastapi.env  docker-compose.yaml  testPicture.html
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/bandim-api/: bandim.db  common.py  cors_config.json  database.py  jwt.py  main.py  main_test.py  middleware.py  models.py  random_geolocations.json  settings.py
backend/bandim-api/routers/: default.py  public.py
backend/bandim-api/vrp_solver/: vrp_solver.py
frontend/: Example2.html  coworkers.html  example.html  example.md  example1.html  example2.html  example3.html  guidelines.html  index.html  leafletTest.html  patients.html  test.py  testPicture.html
frontend/static/: loginstyle.css
