[tool.poetry]
name = "bandim-api"
version = "0.1.0"
description = ""
authors = ["NicklasXYZ"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.3.0"
isort = "^5.13.2"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
aiosqlite = "^0.20.0"
passlib = "^1.7.4"
scipy = "^1.12.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
python-jose = "^3.3.0"
redis = "^5.0.3"
scikit-learn = "^1.4.1.post1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
poethepoet = "^0.25.0"
bcrypt = "4.0.1"

[tool.poe.tasks]
black-format = "black ."
black-check = "black . --check --diff -v"
isort-format = "isort . --profile black"
isort-check = "isort --check --diff ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
